# art

./: .gitignore  LICENSE  README.md
00001/: CMakeLists.txt  README.md  frag.glsl  skull-and-crossbones.trace  vert.glsl
00001/src/: MathUtil.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
00002/: README.md  frag.glsl  unicorn.trace
00003/: README.md  art.trace  frag.glsl
cmake/Modules/: FindTCLAP.cmake
frag/: CMakeLists.txt  patch.yml
frag/cmake/Modules/: FindRTMIDI.cmake
frag/midi/: akai-apc40.yml  icon_icontrols.yml
frag/personal/: effects_stack_001.glsl  experiment_00001.glsl  foo.glsl  gate.glsl  gradient.glsl  knoty.glsl  mario_edges.glsl  mix_bars.glsl  mix_like.glsl  mix_mario.glsl  multiply.glsl  myShader0.glsl  osc.glsl  rainbow.glsl  stage1.glsl  switchboard.glsl  trail.glsl  trail_drop.glsl  weird.glsl
frag/scripts/: codes.py  debug-midi.py  onboard-midi.py
frag/shaders/: blend_diff.glsl  blend_methods.glsl  blur.glsl  delay.glsl  edges.glsl  hsv.glsl  hue.glsl  invert.glsl  key_black.glsl  kscope.glsl  lookup.glsl  luminance.glsl  mix.glsl  mix_methods.glsl  noise.glsl  pass.glsl  swiz.glsl  trail_weird.glsl  transform.glsl  tweak.glsl  util.inc  weird_color_1.glsl  weird_color_2.glsl  weird_colors.glsl
frag/shaders/colorizer/: three-band.glsl
frag/shaders/coord/: get.glsl  rep.glsl
frag/shaders/sdf/: circle.glsl  render.glsl  triangle.glsl
frag/src/: Address.cpp  Address.h  AddressOrValue.cpp  AddressOrValue.h  App.h  Camera.cpp  Camera.h  GLUtil.cpp  GLUtil.h  Group.cpp  Group.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Media.cpp  Media.h  Module.cpp  Module.h  PatchParser.cpp  PatchParser.h  PingPongTexture.cpp  PingPongTexture.h  Resolution.h  ShaderProgram.cpp  ShaderProgram.h  Swizzle.h  Texture.cpp  Texture.h  Value.cpp  Value.h  ValueStore.cpp  ValueStore.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Video.cpp  Video.h  debug.h  (+4 more)
frag/src/cmd/: Command.cpp  Command.h  Overwrite.cpp  Overwrite.h  Reverse.cpp  Reverse.h  Rotate.cpp  Rotate.h
frag/src/midi/: Control.cpp  Control.h  Device.cpp  Device.h  Message.cpp  Message.h
img-frag/: CMakeLists.txt  README.md
img-frag/src/: MathUtil.cpp  Webcam.cpp  Webcam.h  main.cpp  types.h
